--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,9 @@
         <activity android:name=".resfresh.WaterActivity" />
         <activity android:name=".resfresh.BalloonActivity" />
         <activity android:name=".banner.BannarActivity" />
-        <activity android:name=".WelcomeActivity" android:theme="@style/AppSplash">
+        <activity
+            android:name=".WelcomeActivity"
+            android:theme="@style/AppSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,9 +41,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme" android:launchMode="singleTask" >
-
-        </activity>
+            android:launchMode="singleTask"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".vlayout.MoreUiActivity" />
     </application>
 
 </manifest>
