--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/app"
         android:label="@string/app_name"
+        android:maxAspectRatio="256"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
