--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation project(':libarys')
     implementation files('libs/gson-2.3.1.jar')
+    implementation ('com.alibaba.android:vlayout:1.2.8@aar') {
+        transitive = true
+    }
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
 }
