--- a/libarys/build.gradle
+++ b/libarys/build.gradle
@@ -33,5 +33,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
-   
+    implementation 'com.facebook.rebound:rebound:0.3.8'
 }
